fix header centering on mobile and icarus background image

--- a/index.css
+++ b/index.css
@@ -387,6 +387,7 @@ a {
     .header-text {
         width: 100%;
         margin: 0 auto;
+        left: 0px;
     }
 
     .header-text p {
